Increase link size and add meta description tag for SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="personal portfolio website software developer react graphql aws amplify css  html5"
+    />
     <title>Yampier Medina personal portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
@@ -310,23 +314,23 @@
         >
           <div class="flex mb-3 text-2xl sm:text-3xl social-list">
             <a
-              class="block px-1 mt-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
               href="https://twitter.com/jpmti2016"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
-              class="block px-1 mt-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
               href="https://www.linkedin.com/in/yampier-medina-423641169"
             >
               <i class="fab fa-linkedin-in"></i
             ></a>
             <a
-              class="block px-1 mt-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
               href="https://github.com/jpmti2016"
               ><i class="fab fa-github"></i
             ></a>
             <a
-              class="block px-1 mt-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
               href="mailto:jpmti2016@gmail.com"
             >
               <i class="fas fa-at"></i
