--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/trackingmyfinance.png"
+                  src="img/trackingmyfinance_559_402.png"
                   alt="personal desktop"
                 />
               </div>
@@ -280,7 +280,7 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/natureatyourfeet.png"
+                  src="img/natureatyourfeet559_402.png"
                   alt="personal desktop"
                 />
               </div>
