--- a/index.html
+++ b/index.html
@@ -220,7 +220,14 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/trackingmyfinance559_402.png"
+                  src="img/trackingmyfinance.png"
+                  srcset="
+                    img/trackingmyfinance240_173.png 240w,
+                    img/trackingmyfinance272_196.png 272w,
+                    img/trackingmyfinance400_288.png 400w,
+                    img/trackingmyfinance528_380.png 528w,
+                    img/trackingmyfinance559_402.png 559w
+                  "
                   alt="personal desktop"
                 />
               </div>
@@ -280,7 +287,14 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/natureatyourfeet559_402.png"
+                  src="img/natureatyourfeet.png"
+                  srcset="
+                    img/natureatyourfeet240_173.png 240w,
+                    img/natureatyourfeet272_196.png 272w,
+                    img/natureatyourfeet400_288.png 400w,
+                    img/natureatyourfeet528_380.png 528w,
+                    img/natureatyourfeet559_402.png 559w
+                  "
                   alt="personal desktop"
                 />
               </div>
