Added sizes attribute to the img tags

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                     img/trackingmyfinance528_380.png 528w,
                     img/trackingmyfinance559_402.png 559w
                   "
+                  sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
               </div>
@@ -295,6 +296,7 @@
                     img/natureatyourfeet528_380.png 528w,
                     img/natureatyourfeet559_402.png 559w
                   "
+                  sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
               </div>
