change image formats to jpg

--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/trackingmyfinance.png"
+                  src="img/trackingmyfinance.jpg"
                   srcset="
-                    img/trackingmyfinance240_173.png 240w,
-                    img/trackingmyfinance272_196.png 272w,
-                    img/trackingmyfinance400_288.png 400w,
-                    img/trackingmyfinance528_380.png 528w,
-                    img/trackingmyfinance559_402.png 559w
+                    img/trackingmyfinance240_173.jpg 240w,
+                    img/trackingmyfinance272_196.jpg 272w,
+                    img/trackingmyfinance400_288.jpg 400w,
+                    img/trackingmyfinance528_380.jpg 528w,
+                    img/trackingmyfinance559_402.jpg 559w
                   "
                   sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
@@ -288,13 +288,13 @@
                 </p>
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
-                  src="img/natureatyourfeet.png"
+                  src="img/natureatyourfeet.jpg"
                   srcset="
-                    img/natureatyourfeet240_173.png 240w,
-                    img/natureatyourfeet272_196.png 272w,
-                    img/natureatyourfeet400_288.png 400w,
-                    img/natureatyourfeet528_380.png 528w,
-                    img/natureatyourfeet559_402.png 559w
+                    img/natureatyourfeet240_173.jpg 240w,
+                    img/natureatyourfeet272_196.jpg 272w,
+                    img/natureatyourfeet400_288.jpg 400w,
+                    img/natureatyourfeet528_380.jpg 528w,
+                    img/natureatyourfeet559_402.jpg 559w
                   "
                   sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
