Fix that button nav-links did't had title for accessibility added aria-label

--- a/index.html
+++ b/index.html
@@ -331,22 +331,26 @@
           <div class="flex mb-3 text-2xl sm:text-3xl social-list">
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              aria-label="personal tweeter account"
               href="https://twitter.com/jpmti2016"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              aria-label="personal linkedin account"
               href="https://www.linkedin.com/in/yampier-medina-423641169"
             >
               <i class="fab fa-linkedin-in"></i
             ></a>
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              aria-label="personal github account"
               href="https://github.com/jpmti2016"
               ><i class="fab fa-github"></i
             ></a>
             <a
               class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              aria-label="personal email account"
               href="mailto:jpmti2016@gmail.com"
             >
               <i class="fas fa-at"></i
