--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
                   src="img/trackingmyfinance.jpg"
+                  loading="lazy"
                   srcset="
                     img/trackingmyfinance240_173.jpg 240w,
                     img/trackingmyfinance272_196.jpg 272w,
@@ -289,6 +290,7 @@
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
                   src="img/natureatyourfeet.jpg"
+                  loading="lazy"
                   srcset="
                     img/natureatyourfeet240_173.jpg 240w,
                     img/natureatyourfeet272_196.jpg 272w,
@@ -303,7 +305,7 @@
               <p class="mt-2 text-lg text-gray-600 sm:mt-8">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda quod culpa, quisquam repellat reprehenderit deserunt
-                facilis sint dolore maiores nostrum!
+                facilis sint dolore maiores nostrum!bu
               </p>
               <p class="mt-2 text-lg text-gray-600">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
