--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
+    <script src="lazysizes.min.js" async=""></script>
   </head>
   <body class="bg-gray-100">
     <noscript>This site runs best with JavaScript enabled.</noscript>
@@ -219,9 +220,17 @@
                   >
                 </p>
                 <img
-                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
+                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/trackingmyfinance.jpg"
                   src="img/trackingmyfinance.jpg"
                   loading="lazy"
+                  data-srcset="
+                    img/trackingmyfinance240_173.jpg 240w,
+                    img/trackingmyfinance272_196.jpg 272w,
+                    img/trackingmyfinance400_288.jpg 400w,
+                    img/trackingmyfinance528_380.jpg 528w,
+                    img/trackingmyfinance559_402.jpg 559w
+                  "
                   srcset="
                     img/trackingmyfinance240_173.jpg 240w,
                     img/trackingmyfinance272_196.jpg 272w,
@@ -229,6 +238,7 @@
                     img/trackingmyfinance528_380.jpg 528w,
                     img/trackingmyfinance559_402.jpg 559w
                   "
+                  data-sizes="auto"
                   sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
@@ -288,9 +298,17 @@
                   >
                 </p>
                 <img
-                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center"
+                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/natureatyourfeet.jpg"
                   src="img/natureatyourfeet.jpg"
                   loading="lazy"
+                  data-srcset="
+                    img/natureatyourfeet240_173.jpg 240w,
+                    img/natureatyourfeet272_196.jpg 272w,
+                    img/natureatyourfeet400_288.jpg 400w,
+                    img/natureatyourfeet528_380.jpg 528w,
+                    img/natureatyourfeet559_402.jpg 559w
+                  "
                   srcset="
                     img/natureatyourfeet240_173.jpg 240w,
                     img/natureatyourfeet272_196.jpg 272w,
@@ -298,6 +316,7 @@
                     img/natureatyourfeet528_380.jpg 528w,
                     img/natureatyourfeet559_402.jpg 559w
                   "
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
