--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="personal portfolio website software developer react graphql aws amplify css  html5"
+      content="personal portfolio website software developer react graphql aws amplify css html5 taildwindcss bulma postcss"
     />
     <title>Yampier Medina personal portfolio</title>
     <link
@@ -222,7 +222,6 @@
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
                   data-src="img/trackingmyfinance.jpg"
-                  src="img/trackingmyfinance.jpg"
                   loading="lazy"
                   data-srcset="
                     img/trackingmyfinance240_173.jpg 240w,
@@ -231,15 +230,7 @@
                     img/trackingmyfinance528_380.jpg 528w,
                     img/trackingmyfinance559_402.jpg 559w
                   "
-                  srcset="
-                    img/trackingmyfinance240_173.jpg 240w,
-                    img/trackingmyfinance272_196.jpg 272w,
-                    img/trackingmyfinance400_288.jpg 400w,
-                    img/trackingmyfinance528_380.jpg 528w,
-                    img/trackingmyfinance559_402.jpg 559w
-                  "
-                  data-sizes="auto"
-                  sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
               </div>
@@ -300,7 +291,6 @@
                 <img
                   class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
                   data-src="img/natureatyourfeet.jpg"
-                  src="img/natureatyourfeet.jpg"
                   loading="lazy"
                   data-srcset="
                     img/natureatyourfeet240_173.jpg 240w,
@@ -309,15 +299,7 @@
                     img/natureatyourfeet528_380.jpg 528w,
                     img/natureatyourfeet559_402.jpg 559w
                   "
-                  srcset="
-                    img/natureatyourfeet240_173.jpg 240w,
-                    img/natureatyourfeet272_196.jpg 272w,
-                    img/natureatyourfeet400_288.jpg 400w,
-                    img/natureatyourfeet528_380.jpg 528w,
-                    img/natureatyourfeet559_402.jpg 559w
-                  "
                   data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
-                  sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
               </div>
