Redesigned buttons and link

--- a/index.html
+++ b/index.html
@@ -72,34 +72,34 @@
       </div>
       <nav class="pt-2 pb-3 pl-8 nav is-closed sm:flex">
         <a
-          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded nav-item sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#wellcome"
           >Home</a
         >
         <a
-          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded nav-item sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#about"
           >About</a
         >
         <a
-          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded nav-item sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#projects"
           >Projects</a
         >
         <a
-          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded nav-item sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#education"
           >Education</a
         >
         <a
-          class="block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded nav-item sm:text-sm lg:text-xl spaced-x-6 hover:bg-gray-200 sm:py-0 sm:m-0 sm:ml-2"
+          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#contact"
           >Contact</a
         >
       </nav>
     </header>
 
-    <section id="wellcome" class="bg-gray-200">
+    <section id="wellcome" class="bg-gray-100">
       <div class="flex pt-24 pb-32">
         <div class="container text-center sm:py-20 md:py-24 xl:py-32">
           <p class="mb-2 text-lg font-light tracking-widest sm:text-2xl">
@@ -114,7 +114,7 @@
           <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-5xl">
             A Software Engineer
           </h2>
-          <p class="mb-2 text-lg leading-8 sm:text-xl">
+          <p class="mb-10 text-lg leading-8 sm:text-xl">
             I like AWS serverless computing, React, GraphQL and ES Next.
           </p>
           <p class="mb-2 text-xl font-semibold leading-8 sm:text-xl">
@@ -124,16 +124,14 @@
             Searching, 100% Remote
           </p>
 
-          <a
-            href="mailto:jpmti2016@gmail.com"
-            class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700"
+          <a href="mailto:jpmti2016@gmail.com" class="btn btn-blue"
             >Contact me</a
           >
         </div>
       </div>
     </section>
 
-    <section id="about" class="bg-gray-100">
+    <section id="about" class="bg-gray-200">
       <div class="container">
         <div class="flex flex-col mx-4 mt-6 sm:mt-7">
           <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-3xl">
@@ -188,7 +186,7 @@
       </div>
     </section>
 
-    <section id="projects" class="bg-gray-200">
+    <section id="projects" class="bg-gray-100">
       <div class="container">
         <div class="mx-4 mt-6 sm:mt-7">
           <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-3xl">
@@ -254,7 +252,7 @@
               </p>
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
                 <a
-                  class="shadow-lg btn btn-indigo"
+                  class="shadow-lg btn btn-blue"
                   href="https://www.trackingmyfinance.com"
                   >Demo</a
                 >
@@ -317,7 +315,7 @@
                 Temporibus, eum?
               </p> -->
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
-                <a class="shadow-lg btn btn-indigo" href="#">Demo</a>
+                <a class="shadow-lg btn btn-blue" href="#">Demo</a>
                 <a class="shadow-lg btn btn-gray" href="#">Code</a>
               </div>
             </div>
