Fix constrast of background and foreground colors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <noscript>This site runs best with JavaScript enabled.</noscript>
 
     <header
-      class="sticky top-0 px-4 mx-auto text-gray-500 bg-white sm:flex sm:items-center sm:justify-between sm:px-12"
+      class="sticky top-0 px-4 mx-auto text-gray-500 bg-gray-200 sm:flex sm:items-center sm:justify-between sm:px-12"
     >
       <div class="flex items-center justify-between py-5 text-base lg:py-14">
         <div class="flex items-center">
@@ -36,7 +36,7 @@
           </div>
           <div class="flex-shrink-0">
             <span
-              class="block text-xl font-bold font-extrabold leading-none text-gray-900 no-underline whitespace-no-wrap sm:inline lg:text-3xl lg:leading-tight"
+              class="block text-xl font-extrabold leading-none text-gray-900 no-underline whitespace-no-wrap sm:inline lg:text-3xl lg:leading-tight"
               >jpmti2016</span
             >
           </div>
@@ -86,11 +86,7 @@
           href="#projects"
           >Projects</a
         >
-        <a
-          class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
-          href="#education"
-          >Education</a
-        >
+
         <a
           class="nav-item sm:text-sm lg:text-xl sm:py-0 sm:m-0 sm:ml-2"
           href="#contact"
@@ -158,7 +154,7 @@
           <p class="mb-3 sm:text-lg">
             I use VS Code, Git/Github, Chrome Developer Tools and Amplify CLI
             daily. I code on a Dell Inspiron 15 7000 Series (Ubuntu 20.04 LTS)
-            pluged to an external Dell UltraSharp 27 4K Monitor.
+            plugged to an external Dell UltraSharp 27 4K Monitor.
           </p>
           <p class="mb-3 sm:text-lg">
             I speak English (continuosly improving) and Spanish (native).
@@ -186,34 +182,34 @@
       </div>
     </section>
 
-    <section id="projects" class="bg-gray-100">
+    <section id="projects" class="mb-10 bg-gray-100">
       <div class="container">
         <div class="mx-4 mt-6 sm:mt-7">
           <h2 class="mb-3 text-2xl font-bold tracking-wide sm:text-3xl">
             Projects
           </h2>
           <div class="sm:grid sm:grid-cols-2 sm:gap-8">
-            <div class="flex flex-col p-2 bg-white sm:p-4">
+            <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
               <div>
                 <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
                   Money Tracker.
                 </h3>
                 <p class="inline-block">
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >Amplify</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >Semantic UI</span
                   >
 
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >React</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >GraphQL</span
                   >
                 </p>
@@ -232,13 +228,13 @@
                   alt="personal desktop"
                 />
               </div>
-              <p class="mt-2 text-lg text-gray-600 sm:mt-8">
+              <p class="mt-2 text-lg text-gray-800 sm:mt-8">
                 Keeping records of our expenses is a hard work. Also our
                 receips, for everything, are in a continous treatening by the
                 amount of space that they need and the probability of lossing
                 them.
               </p>
-              <p class="mt-2 text-lg text-gray-600">
+              <p class="mt-2 text-lg text-gray-800">
                 But event worse how to
                 <span class="font-semibold">detect trends</span> in our buying
                 habits or how to know the
@@ -246,7 +242,7 @@
                   >size of your budget still alive</span
                 >?
               </p>
-              <p class="mt-2 text-lg text-gray-600">
+              <p class="mt-2 text-lg text-gray-800">
                 Try the app, create a new user or use user: test password:
                 test2020
               </p>
@@ -259,30 +255,30 @@
                 <a class="shadow-lg btn btn-gray" href="#">Code</a>
               </div>
             </div>
-            <div class="flex flex-col p-2 bg-white sm:p-4">
+            <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
               <div>
                 <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
                   Nature at your feet.
                 </h3>
                 <p class="inline-block">
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >CSS</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >CSS Grid</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >Flexbox</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >HTML5</span
                   >
                   <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-white uppercase bg-indigo-600 rounded-full sm:mb-1"
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >PostCSS</span
                   >
                 </p>
@@ -301,16 +297,16 @@
                   alt="personal desktop"
                 />
               </div>
-              <p class="mt-2 text-lg text-gray-600 sm:mt-8">
+              <p class="mt-2 text-lg text-gray-800 sm:mt-8">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda quod culpa, quisquam repellat reprehenderit deserunt
                 facilis sint dolore maiores nostrum!bu
               </p>
-              <p class="mt-2 text-lg text-gray-600">
+              <p class="mt-2 text-lg text-gray-800">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Obcaecati, dolorum?
               </p>
-              <!-- <p class="mt-2 text-lg text-gray-600">
+              <!-- <p class="mt-2 text-lg text-gray-800">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Temporibus, eum?
               </p> -->
@@ -324,33 +320,33 @@
       </div>
     </section>
 
-    <footer id="contact" class="">
+    <footer id="contact" class="bg-gray-200">
       <div class="container">
         <div
           class="flex flex-col items-center content-center justify-center py-4 text-xl social"
         >
           <div class="flex mb-3 text-2xl sm:text-3xl social-list">
             <a
-              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal tweeter account"
               href="https://twitter.com/jpmti2016"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
-              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal linkedin account"
               href="https://www.linkedin.com/in/yampier-medina-423641169"
             >
               <i class="fab fa-linkedin-in"></i
             ></a>
             <a
-              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal github account"
               href="https://github.com/jpmti2016"
-              ><i class="fab fa-github"></i
+              ><i class="fab fa-github-square"></i
             ></a>
             <a
-              class="block px-2 mt-1 mr-1 rounded-full hover:bg-gray-200"
+              class="block px-2 mt-1 mr-1 rounded-full hover:bg-blue-800 hover:text-gray-100"
               aria-label="personal email account"
               href="mailto:jpmti2016@gmail.com"
             >
