--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       content="personal portfolio website software developer react graphql aws amplify css html5 taildwindcss bulma postcss"
     />
     <title>Yampier Medina personal portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="stylesheet" href="build/index.css" />
     <script
       defer
@@ -194,27 +191,9 @@
                 <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
                   Money Tracker.
                 </h3>
-                <p class="inline-block">
-                  <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >Amplify</span
-                  >
-                  <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >Semantic UI</span
-                  >
 
-                  <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >React</span
-                  >
-                  <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >GraphQL</span
-                  >
-                </p>
                 <img
-                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  class="my-3 rounded-lg shadow-xl sm:my-4 sm:w-full sm:object-cover sm:object-center lazyload"
                   data-src="img/trackingmyfinance.jpg"
                   loading="lazy"
                   data-srcset="
@@ -227,8 +206,43 @@
                   data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
                   alt="personal desktop"
                 />
+                <p class="inline-block">
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >JS</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >AWS Amplify</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >GraphQL</span
+                  >
+
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >React</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >React Hook Form</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Bulma</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Git</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >GitHub</span
+                  >
+                </p>
               </div>
-              <p class="mt-2 text-lg text-gray-800 sm:mt-8">
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 Keeping records of our expenses is a hard work. Also our
                 receips, for everything, are in a continous treatening by the
                 amount of space that they need and the probability of lossing
@@ -252,26 +266,37 @@
                   href="https://www.trackingmyfinance.com"
                   >Demo</a
                 >
-                <a class="shadow-lg btn btn-gray" href="#">Code</a>
+                <a class="shadow-lg btn btn-gray" href="#">Info</a>
               </div>
             </div>
             <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
               <div>
                 <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
-                  Nature at your feet.
+                  Portfolio website
                 </h3>
+
+                <img
+                  class="my-3 rounded-lg shadow-xl sm:my-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/personal-portfolio.jpg"
+                  loading="lazy"
+                  data-srcset="
+                    img/personal-portfolio_240.jpg 240w,
+                    img/personal-portfolio_272.jpg 272w,
+                    img/personal-portfolio_400.jpg 400w,
+                    img/personal-portfolio_528.jpg 528w,
+                    img/personal-portfolio_559.jpg 559w
+                  "
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
+                  alt="personal desktop"
+                />
                 <p class="inline-block">
                   <span
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >CSS</span
+                    >Tailwind CSS</span
                   >
                   <span
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >CSS Grid</span
-                  >
-                  <span
-                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >Flexbox</span
+                    >JavaScript (JS)</span
                   >
                   <span
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
@@ -281,23 +306,25 @@
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
                     >PostCSS</span
                   >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Gimbal</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Git</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Github</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >Gimp</span
+                  >
                 </p>
-                <img
-                  class="mt-3 rounded-lg shadow-xl sm:mt-4 sm:w-full sm:object-cover sm:object-center lazyload"
-                  data-src="img/natureatyourfeet.jpg"
-                  loading="lazy"
-                  data-srcset="
-                    img/natureatyourfeet240_173.jpg 240w,
-                    img/natureatyourfeet272_196.jpg 272w,
-                    img/natureatyourfeet400_288.jpg 400w,
-                    img/natureatyourfeet528_380.jpg 528w,
-                    img/natureatyourfeet559_402.jpg 559w
-                  "
-                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
-                  alt="personal desktop"
-                />
               </div>
-              <p class="mt-2 text-lg text-gray-800 sm:mt-8">
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Assumenda quod culpa, quisquam repellat reprehenderit deserunt
                 facilis sint dolore maiores nostrum!bu
@@ -312,7 +339,137 @@
               </p> -->
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
                 <a class="shadow-lg btn btn-blue" href="#">Demo</a>
-                <a class="shadow-lg btn btn-gray" href="#">Code</a>
+                <a
+                  class="shadow-lg btn btn-gray"
+                  href="https://github.com/jpmti2016/jpmti2016.github.io"
+                  >Info</a
+                >
+              </div>
+            </div>
+            <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
+              <div>
+                <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
+                  Image gallery
+                </h3>
+
+                <img
+                  class="my-3 rounded-lg shadow-xl sm:my-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/image-gallery.jpg"
+                  loading="lazy"
+                  data-srcset="
+                    img/image-gallery_240.jpg 240w,
+                    img/image-gallery_272.jpg 272w,
+                    img/image-gallery_400.jpg 400w,
+                    img/image-gallery_528.jpg 528w,
+                    img/image-gallery_559.jpg 559w
+                  "
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
+                  alt="personal desktop"
+                />
+                <p class="inline-block">
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >CSS</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >CSS Grid</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >HTML5</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >JS</span
+                  >
+                </p>
+              </div>
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Assumenda quod culpa, quisquam repellat reprehenderit deserunt
+                facilis sint dolore maiores nostrum!bu
+              </p>
+              <p class="mt-2 text-lg text-gray-800">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Obcaecati, dolorum?
+              </p>
+              <!-- <p class="mt-2 text-lg text-gray-800">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Temporibus, eum?
+              </p> -->
+              <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
+                <a
+                  class="shadow-lg btn btn-blue"
+                  href="https://jpmti2016.github.io/image-gallery/"
+                  >Demo</a
+                >
+                <a
+                  class="shadow-lg btn btn-gray"
+                  href="https://github.com/jpmti2016/image-gallery"
+                  >Info</a
+                >
+              </div>
+            </div>
+            <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
+              <div>
+                <h3 class="mb-1 text-xl font-bold leading-tight text-gray-800">
+                  Nature at your feet.
+                </h3>
+
+                <img
+                  class="my-3 rounded-lg shadow-xl sm:my-4 sm:w-full sm:object-cover sm:object-center lazyload"
+                  data-src="img/css-grid-album.jpg"
+                  loading="lazy"
+                  data-srcset="
+                    img/css-grid-album_240.jpg 240w,
+                    img/css-grid-album_272.jpg 272w,
+                    img/css-grid-album_400.jpg 400w,
+                    img/css-grid-album_528.jpg 528w,
+                    img/css-grid-album_559.jpg 559w
+                  "
+                  data-sizes="(min-width: 1280px) 528px, (min-width: 1040px) 400px, (min-width: 780px) 272px, (min-width: 640px) 208px, calc(100vw - 80px)"
+                  alt="personal desktop"
+                />
+                <p class="inline-block">
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >CSS</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >CSS Grid</span
+                  >
+                  <span
+                    class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
+                    >HTML5</span
+                  >
+                </p>
+              </div>
+              <p class="mt-2 text-lg text-gray-800 sm:mt-4">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Assumenda quod culpa, quisquam repellat reprehenderit deserunt
+                facilis sint dolore maiores nostrum!bu
+              </p>
+              <p class="mt-2 text-lg text-gray-800">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Obcaecati, dolorum?
+              </p>
+              <!-- <p class="mt-2 text-lg text-gray-800">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Temporibus, eum?
+              </p> -->
+              <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
+                <a
+                  class="shadow-lg btn btn-blue"
+                  href="https://jpmti2016.github.io/css-grid-album/"
+                  >Demo</a
+                >
+                <a
+                  class="shadow-lg btn btn-gray"
+                  href="https://github.com/jpmti2016/css-grid-album"
+                  >Info</a
+                >
               </div>
             </div>
           </div>
@@ -390,6 +547,19 @@
       navItems.forEach((item) => {
         item.addEventListener("click", () => toggleClasses());
       });
+    </script>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: ["Playfair Display:900|Roboto:300,400"] },
+      };
+      (function () {
+        var wf = document.createElement("script");
+        wf.src = "https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js";
+        wf.type = "text/javascript";
+        wf.async = "true";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
     </script>
   </body>
 </html>
