Fix google font render blocking

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
       content="personal portfolio website software developer react graphql aws amplify css html5 taildwindcss bulma postcss"
     />
     <title>Yampier Medina personal portfolio</title>
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="build/index.css" />
+
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
@@ -547,19 +554,6 @@
       navItems.forEach((item) => {
         item.addEventListener("click", () => toggleClasses());
       });
-    </script>
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: ["Playfair Display:900|Roboto:300,400"] },
-      };
-      (function () {
-        var wf = document.createElement("script");
-        wf.src = "https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js";
-        wf.type = "text/javascript";
-        wf.async = "true";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
     </script>
   </body>
 </html>
